# segway_v3

./: .gitignore
segway_bringup/: package.xml
segway_bringup/launch/platform/: segway.launch
segway_bringup/launch/teleop/config/: cmd_vel_mux.yaml
segway_description/: CMakeLists.txt
segway_description/launch/: description.launch
segway_description/urdf/RMP_OMNI/: rmp.urdf.xacro
segway_description/urdf/sensors/: sick_tim.urdf.xacro
segway_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
segway_gazebo_plugins/include/segway_gazebo_plugins/: segway_ros_force_based_move.h
segway_gazebo_plugins/src/: segway_ros_force_based_move.cpp
segway_ros/src/segway/: io_eth.py  segway_comm.py  segway_data_classes.py  segway_teleop.py
segway_v3/: package.xml
segway_v3_config/: CMakeLists.txt  segway_config.sh
